# pytorch-lightning-hydra-cookiecutter

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  requirements.txt  run.py  setup.cfg
{{cookiecutter.project_slug}}/bash/: install_pytorch.sh  setup_conda.sh  setup_environment.sh
{{cookiecutter.project_slug}}/configs/: config.yaml
{{cookiecutter.project_slug}}/configs/callbacks/: default.yaml  wandb.yaml
{{cookiecutter.project_slug}}/configs/datamodule/: mnist_datamodule.yaml
{{cookiecutter.project_slug}}/configs/experiment/: example_full.yaml  example_simple.yaml
{{cookiecutter.project_slug}}/configs/hparams_search/: mnist_optuna.yaml
{{cookiecutter.project_slug}}/configs/logger/: comet.yaml  csv.yaml  many_loggers.yaml  mlflow.yaml  neptune.yaml  tensorboard.yaml  wandb.yaml
{{cookiecutter.project_slug}}/configs/model/: mnist_model.yaml
{{cookiecutter.project_slug}}/configs/trainer/: ddp.yaml  debug.yaml
{{cookiecutter.project_slug}}/src/: train.py
{{cookiecutter.project_slug}}/src/callbacks/: wandb_callbacks.py
{{cookiecutter.project_slug}}/tests/helpers/: runif.py
{{cookiecutter.project_slug}}/tests/unit/: test_mnist_datamodule.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: train.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/models/: mnist_model.py
