[metadata]
project_name = {{cookiecutter.project_name}}
author = {{cookiecutter.author_name}}
contact = {{cookiecutter.email}}
license_file = LICENSE
description_file = README.md

[isort]
line_length = 99
profile = black
filter_files = True

[flake8]
max_line_length = 99
show_source = True
format = pylint
ignore =
    F401  # Module imported but unused
    W504  # Line break occurred after a binary operator
    F841  # Local variable name is assigned to but never used
    F403  # from module import *
    E501  # Line too long
exclude =
    .git
    __pycache__
    data/*
    tests/*
    notebooks/*
    logs/*

[tool:pytest]
python_files = tests/*
log_cli = True
markers =
    slow
addopts =
    --durations=0
    --strict-markers
    --doctest-modules
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning

[mypy]
files=src,tests
ignore_missing_imports=true
